--- a/emerge.html
+++ b/emerge.html
@@ -13,9 +13,9 @@
                 <div id='logo'> <img id='logoimage' src="./images/logo.svg"></div>
                 <div id='menu'>
                     <ul>
-                        <li><a href='/index.html'>Home</a></li>
-                        <li><a href='/frameworks.html'>Frameworks</a></li>
-                        <li><a href='/contact.html'>Contact</a></li>
+                        <li<li><a href='/opensourceframeworks.github.io/index.html'>Home</a></li>
+                        <li><a href='/opensourceframeworks.github.io/frameworks.html'>Frameworks</a></li>
+                        <li><a href='/opensourceframeworks.github.io/contact.html'>Contact</a></li>
                     </ul>
                 </div>
                 
