--- a/frameworks.html
+++ b/frameworks.html
@@ -11,7 +11,7 @@
 
         gtag('config', 'G-P1M1C5ND6G');
         </script>
-        <title>Dgrid</title>
+        <title>Frameworks</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
