--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         gtag('config', 'G-P1M1C5ND6G');
         </script>
 
-        <title>Dgrid</title>
+        <title>Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
