added content for emerge

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 <img class='contact' src='images/kapil.png'>
                 <div class='contact-card'>
                     <h1> Kapil Duwadi </h1>
-                    <p> MS in Electrical Engineering, currently research engineer at NREL</p>
+                    <p> MS in electrical engineering, currently research engineer at NREL</p>
                     <p> Linkedin: <a href='https://www.linkedin.com/public-profile/in/kapil-duwadi'> https://www.linkedin.com/public-profile/in/kapil-duwadi </a></p>
                     <p> GitHub: <a href="https://github.com/KapilDuwadi"> https://github.com/KapilDuwadi</a></p>
                     <p> Email: kapil.duwadi34@outlook.com</p>
