--- a/evolve.html
+++ b/evolve.html
@@ -42,7 +42,7 @@
                 <div class='framework-content'>
                     <h4> Read: Approx. 8 minutes</h4>
                     <p> EVOLVE is an opensource software framework developed using <a href="https://www.python.org">Python</a> at National Renewable Energy Laboratrory (NREL) in 2020.
-                    This tools allows user to study impact on net load variation under the influence of mix of electric vehicles, energy storage and solar. <a href='evolve.html'> Read more >></a></p>
+                    This tool allows user to study impact on net load variation under the influence of electric vehicles, energy storage and solar. <a href='evolve.html'> Read more >></a></p>
                 </div>
 
 
