--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
                 <section id='big-text'>
                     <h1>Welcome to DGrid!</h1>
-                    <p> A place to to explore collection of open source frameworks for analyzing impact of emerging technologies in power distribution grid. </p>
+                    <p> A place to explore collection of open source frameworks for analyzing impact of emerging technologies in power distribution grid. </p>
                 </section>
 
                 <img class="network" src='./images/network.svg'>
                 
-                <p class="styled_par"> Researchers in universities and national laboratories in US create amazing software tools and frameworks to help assess impact of emerging technologies in power distribution grid.
+                <p class="styled_par"> Researchers in universities and national laboratories in US each year create amazing software tools and frameworks to help assess impact of emerging technologies in power distribution grid.
                     However, not many people know about them. This website is intended to provide information about cutting edge open source software frameworks developed by researchers that help distribution power system analysis easy.
                 </p>
                 
