--- a/pydss.html
+++ b/pydss.html
@@ -35,15 +35,15 @@
 
                 <div class='framework-container'>
                     <h1>PyDSS</h1>
-                    <h2>Python wrapper around OpenDSSDirect and OpenDSS</h2>
+                    <h2>Python wrapper around OpenDSSDirect</h2>
                     <h3> 2019, <a href='https://github.com/NREL/pydss'>https://github.com/NREL/pydss</a></h3>
                     <h3> Source: National Renewable Energy Laboratory (NREL)</h3>
                 </div>
                 
                 <div class='framework-content'>
                     <h4> Read: Approx. 12 minutes</h4>
-                    <p> PyDSS is an opensource software framework developed using <a href="https://www.python.org">Python</a> at National Renewable Energy Laboratrory (NREL) in 2019.
-                    This tool is essentially a wrapper around <a href="https://pypi.org/project/OpenDSSDirect.py">OpenDSSDirect</a> to make it easy to manage and run time series 
+                    <p> PyDSS is an opensource software framework developed using <a href="https://www.python.org">Python</a> at National Renewable Energy Laboratory (NREL) in 2019.
+                    This tool is essentially a wrapper around <a href="https://pypi.org/project/OpenDSSDirect.py">OpenDSSDirect</a> which makes it easy to manage and run time series 
                     powerflow using <a href="https://www.epri.com/pages/sa/opendss">OpenDSS.</a> <a href='pydss.html'> Read more >></a></p>
                 </div>
 
