Added content for evolve

--- a/frameworks.html
+++ b/frameworks.html
@@ -41,7 +41,7 @@
                 
                 <div class='framework-content'>
                     <h4> Read: Approx. 10 minutes</h4>
-                    <p> EMeRGE is an opensource software framework developed using <a href="https://www.python.org">Python</a> at National Renewable Energy Laboratory (NREL) in 2020.
+                    <p> EMeRGE is an opensource software framework developed using <a href="https://www.python.org">Python</a> and <a href="https://reactjs.org/">React</a> at National Renewable Energy Laboratory (NREL) in 2020.
                     This tool allows user to develop distribution feeder model using GIS data, develop customized solar deployment scenarios, compute and compare risk metrics at both system
                     and asset level and visualize analysis results in an easy to use interactive dashboard. <a href='emerge.html'> Read more >></a></p>
                 </div>
