--- a/frameworks.html
+++ b/frameworks.html
@@ -67,12 +67,25 @@
                 </div>
                 
                 <div class='framework-content'>
-                    <h4> Read: Approx. 12 minutes</h4>
+                    <h4> Read: Approx. 5 minutes</h4>
                     <p> PyDSS is an opensource software framework developed using <a href="https://www.python.org">Python</a> at National Renewable Energy Laboratory (NREL) in 2019.
                     This tool is essentially a wrapper around <a href="https://pypi.org/project/OpenDSSDirect.py">OpenDSSDirect</a> which makes it easy to manage and run time series 
                     powerflow using <a href="https://www.epri.com/pages/sa/opendss">OpenDSS.</a> <a href='pydss.html'> Read more >></a></p>
                 </div>
 
+                <div class='framework-container'>
+                    <h1>PyPSSE</h1>
+                    <h2>Python wrapper around PSSE python API</h2>
+                    <h3> 2020, <a href='https://github.com/NREL/pydss'>https://github.com/NREL/PyPSSE</a></h3>
+                    <h3> Source: National Renewable Energy Laboratory (NREL)</h3>
+                </div>
+                
+                <div class='framework-content'>
+                    <h4> Read: Approx. 5 minutes</h4>
+                    <p> PyPSSE is an opensource software framework developed using <a href="https://www.python.org">Python</a> at National Renewable Energy Laboratory (NREL) in 2020.
+                    This tool is a higher level interface to <a href="https://new.siemens.com/global/en/products/energy/energy-automation-and-smart-grid/pss-software/pss-e.html">PSSE's</a> python API which makes it easy to manage and run time series 
+                    powerflow as well as dynamic simulation using PSSE.</a> <a href='pypsse.html'> Read more >></a></p>
+                </div>
 
 
             </div>
